# nsnake

./: .hgignore  .hgsigs  .hgtags  CHANGES.md  CMakeLists.txt  GNUmakefile  INSTALL.md  LICENSE.md  Makefile  README.md  TODO.md  config.h.in  config.mk  nsnake.6  nsnake.c  nsnake.h  sysconfig.h  sysconfig.sh
cmake/: check-games.cmake  config.h.in  post-install.cmake.in
windows/vs/amd64/debug/libpdcurses/lib/: panel.lib
windows/vs/amd64/release/libpdcurses/lib/: pdcurses.lib
windows/vs/x86/debug/libpdcurses/lib/: panel.lib
windows/vs/x86/release/libpdcurses/lib/: pdcurses.lib
